--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
+    "dev": "plasmo dev",
+    "dev:plasmo": "",
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start"
@@ -19,8 +20,10 @@
     "@trpc/server": "^10.8.1",
     "next": "13.1.2",
     "next-auth": "^4.18.7",
+    "plasmo": "^0.63.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sharp": "^0.31.3",
     "superjson": "1.9.1",
     "zod": "^3.20.2"
   },
@@ -31,17 +34,25 @@
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
-    "autoprefixer": "^10.4.7",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.30.0",
     "eslint-config-next": "13.1.2",
-    "postcss": "^8.4.14",
+    "postcss": "^8.4.21",
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
     "prisma": "^4.8.0",
-    "tailwindcss": "^3.2.0",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4"
   },
   "ct3aMetadata": {
     "initVersion": "7.3.2"
+  },
+  "manifest": {
+    "host_permissions": [
+      "https://*/*"
+    ],
+    "permissions": [
+      "tabs"
+    ]
   }
 }
