--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@trpc/next": "^10.8.1",
     "@trpc/react-query": "^10.8.1",
     "@trpc/server": "^10.8.1",
+    "framer-motion": "^8.5.0",
     "next": "13.1.2",
     "next-auth": "^4.18.7",
     "plasmo": "^0.63.0",
