--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "@trpc/server": "^10.8.1",
     "next": "13.1.2",
     "next-auth": "^4.18.7",
+    "openai": "^3.1.0",
     "plasmo": "^0.63.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sharp": "^0.31.3",
     "superjson": "1.9.1",
     "zod": "^3.20.2"
   },
