--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^8.5.0",
     "next": "13.1.2",
     "next-auth": "^4.18.7",
+    "nextjs-cors": "^2.1.2",
     "openai": "^3.1.0",
     "plasmo": "^0.63.0",
     "react": "18.2.0",
