--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@trpc/next": "^10.8.1",
     "@trpc/react-query": "^10.8.1",
     "@trpc/server": "^10.8.1",
+    "@uiball/loaders": "^1.2.6",
     "classnames": "^2.3.2",
     "framer-motion": "^8.5.0",
     "next": "13.1.2",
@@ -53,10 +54,12 @@
   },
   "manifest": {
     "host_permissions": [
-      "https://*/*"
+      "https://*/*",
+      "http://*/*"
     ],
     "permissions": [
-      "tabs"
+      "tabs",
+      "scripting"
     ]
   }
 }
