--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "plasmo": "^0.63.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "superjson": "1.9.1",
     "zod": "^3.20.2"
   },
