--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.7",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "^13.1.4",
     "@prisma/client": "^4.8.0",
+    "@radix-ui/react-dialog": "^1.0.2",
     "@tanstack/react-query": "^4.20.0",
     "@trpc/client": "^10.8.1",
     "@trpc/next": "^10.8.1",
